feat: Implement tooltip cleanup on view switches, remove bivariate class from hazard intersection table, and refine dumbbell and scatter plot visualizations with improved tooltips, legends, and faceting.

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -788,6 +788,10 @@ s2BivariateMap = {
       </div>
     `;
   } else {
+    // Clean up any leftover tooltips from map view when switching to table
+    d3.select(".bivariateTip").remove();
+    d3.select(".bivariateLegendTip").remove();
+    
     // Table view
     const hazardName = s2HazardType === "drought" ? "Drought (Days)" : "Waterlogging (Days)";
     
@@ -822,7 +826,6 @@ s2BivariateMap = {
         "readinessClass",
         "hazardRaw",
         "hazardClass",
-        "bivariateClass",
         "priorityLevel"
       ],
       header: {
@@ -831,7 +834,6 @@ s2BivariateMap = {
         readinessClass: "Readiness Class",
         hazardRaw: hazardName,
         hazardClass: "Hazard Class",
-        bivariateClass: "Bivariate Category",
         priorityLevel: "Priority Level"
       },
       format: {
