--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -883,6 +883,10 @@ s3BivariateMap = {
       ${s3BivariateMap}
     </div>`;
   } else if (s3ViewType === "dumbbell") {
+    // Clean up any leftover tooltips from map view
+    d3.select(".s3BivariateTip").remove();
+    d3.select(".s3BivariateLegendTip").remove();
+    
     // Dumbbell Chart - inline to prevent auto-display
   if (!s3SortedData || s3SortedData.length === 0) {
       yield html`<div style="padding: 20px; background: #f0f0f0; border-radius: 5px;">
@@ -892,13 +896,12 @@ s3BivariateMap = {
   const chartHeight = Math.max(600, s3SortedData.length * 25);
   const linkData = s3SortedData.filter(d => d.accessValue !== null && !isNaN(d.accessValue));
   const accessData = s3SortedData.filter(d => d.accessValue !== null && !isNaN(d.accessValue));
-  const allTipData = [...s3SortedData, ...accessData];
   
       yield html`<div style="width: 100%; overflow-x: auto;">
     <div style="margin-bottom: 10px; padding: 10px; background: #f8f9fa; border-radius: 5px;">
       <div style="display: flex; gap: 20px; align-items: center; font-size: 12px;">
         <div><span style="color: #377eb8;">●</span> ${_lang(cis.s3ReadinessLabel)}</div>
-            <div><span style="color: #ff7f00;">▲</span> ${s3CurrentAccessLabel}</div>
+            <div><span style="color: #ff7f00;">●</span> ${s3CurrentAccessLabel}</div>
         <div><span style="color: #4daf4a;">━</span> ${_lang(cis.s3PositiveGap)}</div>
         <div><span style="color: #e41a1c;">━</span> ${_lang(cis.s3NegativeGap)}</div>
         <div><span style="color: #999999;">━</span> Similar values</div>
@@ -935,63 +938,73 @@ s3BivariateMap = {
               },
           strokeWidth: 2
         }),
-        // Readiness dots (left)
+        // Readiness dots (left) - with tooltip
         Plot.dot(s3SortedData, {
           x: "cis_readiness_avg",
           y: "admin0_name",
           fill: "#377eb8",
-          r: 5
-        }),
-        // Access dots (right)
-        Plot.dot(accessData, {
-          x: "accessValue",
-          y: "admin0_name",
-          fill: "#ff7f00",
           r: 5,
-          shape: "triangle"
-        }),
-        Plot.tip(
-          allTipData,
-          Plot.pointer({
+          tip: {
             fontSize: 14,
-            x: (d) => d.cis_readiness_avg != null ? d.cis_readiness_avg : d.accessValue,
-            y: "admin0_name",
+            format: {
+              x: d => `Readiness: ${d != null ? d.toFixed(3) : "N/A"}`
+            },
             channels: {
-              country: {
-                label: "Country",
-                value: (d) => d.admin0_name
-              },
-              readiness: {
-                label: _lang(cis.s3ReadinessLabel),
-                value: (d) => d.cis_readiness_avg
-              },
-              access: {
-                label: s3CurrentAccessLabel,
-                value: (d) => d.accessValue
-              },
-              gap: {
-                label: _lang(cis.s3GapLabel),
-                value: (d) => d.gap
-              }
+              country: { label: "Country", value: d => d.admin0_name },
+              readiness: { label: _lang(cis.s3ReadinessLabel), value: d => d.cis_readiness_avg },
+              access: { label: s3CurrentAccessLabel, value: d => d.accessValue },
+              gap: { label: _lang(cis.s3GapLabel), value: d => d.gap }
             },
             format: {
               country: true,
-              readiness: (d) => d != null ? d.toFixed(3) : "N/A",
-              access: (d) => d != null ? (d * 100).toFixed(1) + '%' : "N/A",
-              gap: (d) => {
+              x: false,
+              y: false,
+              readiness: d => d != null ? d.toFixed(3) : "N/A",
+              access: d => d != null ? (d * 100).toFixed(1) + '%' : "N/A",
+              gap: d => {
                 if (d == null || isNaN(d)) return "N/A";
                 const label = d > 0 ? _lang(cis.s3PositiveGap) : _lang(cis.s3NegativeGap);
                 return `${d.toFixed(3)} (${label})`;
               }
             }
-          })
-        )
+          }
+        }),
+        // Access dots (right) - with tooltip (using circle for consistency)
+        Plot.dot(accessData, {
+          x: "accessValue",
+          y: "admin0_name",
+          fill: "#ff7f00",
+          r: 5,
+          stroke: "#ff7f00",
+          strokeWidth: 2,
+          tip: {
+            fontSize: 14,
+            channels: {
+              country: { label: "Country", value: d => d.admin0_name },
+              readiness: { label: _lang(cis.s3ReadinessLabel), value: d => d.cis_readiness_avg },
+              access: { label: s3CurrentAccessLabel, value: d => d.accessValue },
+              gap: { label: _lang(cis.s3GapLabel), value: d => d.gap }
+            },
+            format: {
+              country: true,
+              x: false,
+              y: false,
+              readiness: d => d != null ? d.toFixed(3) : "N/A",
+              access: d => d != null ? (d * 100).toFixed(1) + '%' : "N/A",
+              gap: d => {
+                if (d == null || isNaN(d)) return "N/A";
+                const label = d > 0 ? _lang(cis.s3PositiveGap) : _lang(cis.s3NegativeGap);
+                return `${d.toFixed(3)} (${label})`;
+              }
+            }
+          }
+        })
       ]
     })}
     <div style="margin-top: 10px; padding: 10px; background: #f8f9fa; border-radius: 5px;">
       <div style="display: flex; gap: 20px; align-items: center; font-size: 12px;">
         <div><span style="color: #377eb8;">●</span> ${_lang(cis.s3ReadinessLabel)}</div>
-            <div><span style="color: #ff7f00;">▲</span> ${s3CurrentAccessLabel}</div>
+            <div><span style="color: #ff7f00;">●</span> ${s3CurrentAccessLabel}</div>
         <div><span style="color: #4daf4a;">━</span> ${_lang(cis.s3PositiveGap)}</div>
         <div><span style="color: #e41a1c;">━</span> ${_lang(cis.s3NegativeGap)}</div>
         <div><span style="color: #999999;">━</span> Similar values</div>
@@ -1000,6 +1013,10 @@ s3BivariateMap = {
   </div>`;
 }
   } else if (s3ViewType === "scatter") {
+    // Clean up any leftover tooltips from map view
+    d3.select(".s3BivariateTip").remove();
+    d3.select(".s3BivariateLegendTip").remove();
+    
     // Faceted Scatter Plot - showing all access types
     if (!s3ProcessedData || s3ProcessedData.length === 0) {
       yield html`<div style="padding: 20px; background: #f0f0f0; border-radius: 5px;">
@@ -1043,15 +1060,28 @@ s3BivariateMap = {
         }
       });
       
+      // Setup 2x2 facet grid using index-based mapping
+      const n = 2; // Number of columns for 2x2 grid
+      const accessTypes = [
+        _lang(cis.s3AccessCombined), 
+        _lang(cis.s3AccessInternet), 
+        _lang(cis.s3AccessTV), 
+        _lang(cis.s3AccessCellphone)
+      ];
+      const accessIndex = new Map(accessTypes.map((key, i) => [key, i]));
+      const getFx = (key) => accessIndex.get(key) % n;
+      const getFy = (key) => Math.floor(accessIndex.get(key) / n);
+      
       yield html`<div style="width: 100%; overflow-x: auto;">
         <div style="margin-bottom: 15px; padding: 10px; background: #f8f9fa; border-radius: 5px;">
           <div style="font-size: 12px;">
             <strong>${_lang(cis.s3ParityLine)}:</strong> Points above the line indicate access exceeds readiness; points below indicate readiness exceeds access.
           </div>
         </div>
-        ${Plot.plot({
-          width: 1200,
-          height: 800,
+        ${Plot.plot((() => {
+          return {
+          width: 900,
+          height: 700,
           marginTop: 40,
           marginRight: 40,
           marginBottom: 60,
@@ -1067,42 +1097,45 @@ s3BivariateMap = {
           },
           fx: {
             label: null,
-            padding: 0.05,
-            domain: [_lang(cis.s3AccessCombined), _lang(cis.s3AccessInternet), _lang(cis.s3AccessTV), _lang(cis.s3AccessCellphone)]
+            padding: 0.08,
+            tickFormat: null  // Hide fx tick labels, we use text marks for labels
+          },
+          fy: {
+            label: null,
+            padding: 0.08,
+            tickFormat: null  // Hide fy tick labels
           },
           marks: [
-            // Diagonal reference line (parity) - one per facet
-            Plot.line([[0, 0], [1, 1]], {
-              stroke: "#999",
-              strokeWidth: 1.5,
-              strokeDasharray: "4,4",
-              fx: _lang(cis.s3AccessCombined)
+            // Parity lines per facet
+            ...accessTypes.map(accessType => 
+              Plot.line([[0, 0], [1, 1]], {
+                stroke: "#999",
+                strokeWidth: 1.5,
+                strokeDasharray: "4,4",
+                fx: getFx(accessType),
+                fy: getFy(accessType)
+              })
+            ),
+            // Facet labels at top-left of each panel
+            Plot.text(accessTypes, {
+              fx: d => getFx(d),
+              fy: d => getFy(d),
+              text: d => d,
+              frameAnchor: "top-left",
+              dx: 6,
+              dy: 6,
+              fontWeight: "bold",
+              fontSize: 11
             }),
-            Plot.line([[0, 0], [1, 1]], {
-              stroke: "#999",
-              strokeWidth: 1.5,
-              strokeDasharray: "4,4",
-              fx: _lang(cis.s3AccessInternet)
-            }),
-            Plot.line([[0, 0], [1, 1]], {
-              stroke: "#999",
-              strokeWidth: 1.5,
-              strokeDasharray: "4,4",
-              fx: _lang(cis.s3AccessTV)
-            }),
-            Plot.line([[0, 0], [1, 1]], {
-              stroke: "#999",
-              strokeWidth: 1.5,
-              strokeDasharray: "4,4",
-              fx: _lang(cis.s3AccessCellphone)
-            }),
+            Plot.frame(),
             // All countries (not highlighted)
             Plot.dot(
               facetData.filter(d => !s3HighlightedCountries.includes(d.admin0_name)),
               {
                 x: "cis_readiness_avg",
                 y: "accessValue",
-                fx: "accessType",
+                fx: d => getFx(d.accessType),
+                fy: d => getFy(d.accessType),
                 fill: d => {
                   // Calculate bivariate class for this specific access type
                   const readinessClass = d.cis_readiness_avg > 0.67 ? "High" : d.cis_readiness_avg > 0.33 ? "Moderate" : "Low";
@@ -1120,7 +1153,8 @@ s3BivariateMap = {
               {
                 x: "cis_readiness_avg",
                 y: "accessValue",
-                fx: "accessType",
+                fx: d => getFx(d.accessType),
+                fy: d => getFy(d.accessType),
                 fill: "#0066cc",
                 stroke: "#000",
                 strokeWidth: 1.5,
@@ -1134,7 +1168,8 @@ s3BivariateMap = {
                 fontSize: 14,
                 x: "cis_readiness_avg",
                 y: "accessValue",
-                fx: "accessType",
+                fx: d => getFx(d.accessType),
+                fy: d => getFy(d.accessType),
                 channels: {
                   country: {
                     label: "Country",
@@ -1162,7 +1197,8 @@ s3BivariateMap = {
               {
                 x: "cis_readiness_avg",
                 y: "accessValue",
-                fx: "accessType",
+                fx: d => getFx(d.accessType),
+                fy: d => getFy(d.accessType),
                 text: "admin0_name",
                 dy: -12,
                 fontSize: 9,
@@ -1170,10 +1206,15 @@ s3BivariateMap = {
               }
             )
           ]
-        })}
+        };
+        })())}
       </div>`;
 }
   } else {
+    // Clean up any leftover tooltips from map view
+    d3.select(".s3BivariateTip").remove();
+    d3.select(".s3BivariateLegendTip").remove();
+    
     // Table View - inline to prevent auto-display
   if (!s3SortedData || s3SortedData.length === 0) {
       yield html`<div style="padding: 20px; background: #f0f0f0; border-radius: 5px;">
