feat: Relocate and reorient diamond chart axis labels and adjust the legend's horizontal offset.

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -734,32 +734,32 @@ s2BivariateMap = {
     // After 45° rotation, the diamond extends from the center by totalWidth/2 * sqrt(2)
     const diagonalOffset = (totalWidth / 2) * Math.sqrt(2);
     
-    // CIS Readiness label (along bottom-right edge, from bottom corner to right corner)
-    // Position at bottom-right of diamond, text runs along the edge
+    // CIS Readiness label - along Top-RIGHT edge (starts at top, goes down-right)
+    // Anchored at top corner, rotated 45 degrees
     selection
       .append("text")
-      .attr("x", centerX + diagonalOffset + 15)
-      .attr("y", centerY + diagonalOffset + 15)
-      .attr("font-size", "11")
-      .attr("fill", "#333")
-      .attr("font-weight", "600")
-      .attr("text-anchor", "start")
-      .attr("dominant-baseline", "hanging")
-      .attr("transform", `rotate(-45, ${centerX + diagonalOffset + 15}, ${centerY + diagonalOffset + 15})`)
-      .text("CIS Readiness →");
-    
-    // Hazard Severity label (along top-right edge, from top corner to right corner)
-    // Position at top-right of diamond, text runs along the edge
-    selection
-      .append("text")
-      .attr("x", centerX + diagonalOffset + 15)
+      .attr("x", centerX + 10)
       .attr("y", centerY - diagonalOffset - 5)
       .attr("font-size", "11")
       .attr("fill", "#333")
       .attr("font-weight", "600")
       .attr("text-anchor", "start")
-      .attr("dominant-baseline", "auto")
-      .attr("transform", `rotate(45, ${centerX + diagonalOffset + 15}, ${centerY - diagonalOffset - 5})`)
+      .attr("dominant-baseline", "auto") // text sits above the line
+      .attr("transform", `rotate(45, ${centerX + 10}, ${centerY - diagonalOffset - 5})`)
+      .text("CIS Readiness →");
+    
+    // Hazard Severity label - along Top-LEFT edge (starts at top, goes down-left)
+    // Anchored at top corner, rotated -45 degrees
+    selection
+      .append("text")
+      .attr("x", centerX - 10)
+      .attr("y", centerY - diagonalOffset - 5)
+      .attr("font-size", "11")
+      .attr("fill", "#333")
+      .attr("font-weight", "600")
+      .attr("text-anchor", "end")
+      .attr("dominant-baseline", "auto") // text sits above the line
+      .attr("transform", `rotate(-45, ${centerX - 10}, ${centerY - diagonalOffset - 5})`)
       .text("Hazard Severity →");
     
     return selection;
