feat(climateRationale): Use new table component in notebook

--- a/notebooks/climateRational/notebook.qmd
+++ b/notebooks/climateRational/notebook.qmd
@@ -10,11 +10,12 @@ date-edited: today
 ```{ojs}
 import {
   atlasHero,
-  dataTable,
   downloadButton,
   multiLineText,
   loaderDiv,
 } from "/helpers/uiComponents.ojs";
+
+import { filterableDataTable as dataTable } from "/components/atlasTable.ojs";
 
 import { cleanAdminInput_SQL } from "/helpers/data.js";
 
@@ -139,12 +140,21 @@ loaderDiv("plotFutureProjections");
 section4A0 = renderA0Multi({ maxSelections: 2, requireAtLeastOne: true });
 section4A1 = renderA1Multi({ maxSelections: 3 });
 inputTemplate()([section4A0, section4A1]);
+
+climateForm();
 ```
 
 ```{ojs}
-climateForm();
+loaderDiv("plotExtremeEvents");
+```
 
-bars_extremeEvents();
+```{ojs}
+//| output: false
+{
+  renderToDiv("plotExtremeEvents", () => {
+    return bars_extremeEvents();
+  });
+}
 ```
 
 `{ojs} downloadButton(extremeEvents_plotData, "extremeEvents")`
@@ -201,10 +211,6 @@ htl.html`
 ## `{ojs} methodsData` {#methodsData}
 
 ### Data Sources
-
-```{ojs}
-data_obj;
-```
 
 <div id="datasets"></div>
 
@@ -338,7 +344,7 @@ db = await generateDB(
 ```{ojs}
 dbFutureHive = {
     const fut = data_obj.filter((d) => d.sections.includes("futureProjections"));
-    const _db = await DuckDBClient.of();
+    // const _db = await DuckDBClient.of();
     await _db.query(`SET enable_object_cache = true;`)
     await _db.query(`SET enable_http_metadata_cache = true;`)
      
